--- a/scss/components/_typeography.scss
+++ b/scss/components/_typeography.scss
@@ -44,6 +44,10 @@ body {
     margin-left: 1rem;
     margin-bottom: 1rem;
     white-space: nowrap;
+
+    @include media-breakpoint-down(md) {
+      white-space: normal;
+    }
   }
 }
 
