--- a/scss/sections/_project-showcase.scss
+++ b/scss/sections/_project-showcase.scss
@@ -15,10 +15,6 @@
   &__content {
     padding: 0rem 1rem;
 
-    img {
-      width: 75%;
-    }
-
     .icon {
       font-size: 2.5rem;
       color: $primary;
